--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>给你的一封信</title>	    
+		<title>给山大的一封信</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
 		<script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -23,26 +23,23 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
-                      <span class="say"> 我知道我不会甜言蜜语，</span><br>
-                      <span class="say"> 但是我会用行动证明一切</span><br>
-                      <span class="say">你说我啰嗦，</span><br>             
-                          <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
-                      <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
-                      <span class="say">希望可以执子之手，与子偕老</span><br>
-                      <span class="say">如果上天让我许三个愿望，</span><br>
-                              <span class="say">第一个是今生今世和你在一起， </span><br>
-                           <span class="say"> 第二个是再生再世和你在一起，</span><br>
-                           <span class="say">第三个是永生永世和你不分离 </span><br>
-                      <span class="say"><span class="space"></span> -- 爱你的老公</span> </font>
+                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的山大：</span><br>
+                      <span class="say">    祝你120岁生日快乐！</span><br>
+                      <span class="say">    春秋迭代，初心如磐。百廿山大数经变迁，几度分合，历久弥坚，薪火相传。</span><br>
+                      <span class="say">    三校合璧开启新篇章，百年跬步迈向新征程，学无止境，气有浩然。</span><br>             
+                          <span class="say">    山魂海韵储人材，武略文韬入我怀。绿树十年千岭碧，红烛一照百花开。</span><br>
+                      <span class="say">    百廿山大与国家同呼吸共命运，顶天立地，学术报国，</span><br>
+                      <span class="say">    塑“崇实求新”之风骨，成“文史见长”之特色。春华秋实，树蕙滋兰。</span><br>
+                      <span class="say">    凡我在处，便是山大。</span><br>
+                              <span class="say">    百廿山大，有幸遇见。愿山大好，也愿你好。 </span><br>
+                      <span class="say"><span class="space"></span> -- SDUer</span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我喜欢你</font>
+                    <span class="STYLE1"></span><font color="#33CC00">亲爱的山大，您诞生</font>
 <span class="STYLE1">已经是……</span>
                   <div id="clock"></div>
               </div>
@@ -182,11 +179,11 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2010,1 , 15); 			//时间年月日
-		    together.setHours(16);						//小时	
-		    together.setMinutes(53);					//分钟
+		    together.setFullYear(1901,10 , 15); 			//时间年月日
+		    together.setHours(0);						//小时	
+		    together.setMinutes(0);					//分钟
 		    together.setSeconds(0);					//秒前一位
-		    together.setMilliseconds(2);				//秒第二位
+		    together.setMilliseconds(0);				//秒第二位
 
 		    $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
